--- a/mobile/src/main/assets/style.css
+++ b/mobile/src/main/assets/style.css
@@ -229,11 +229,11 @@ path {
   font-family: 'Inconsolata', Monaco, "Lucida Console", Consolas, "Courier New";
   font-size: 14px;
 }
-
+/*
 .y.axis .domain {
   display: none;
 }
-
+*/
 .y.axis line {
   stroke-width: 1px;
   stroke: #ccc;
@@ -256,6 +256,7 @@ circle.death {
 }
 
 #bars {
+  display: none;
   margin-bottom: 0px;
   border-bottom: 1px dotted #ccc;
 }
