--- a/mobile/src/main/assets/style_mobile.css
+++ b/mobile/src/main/assets/style_mobile.css
@@ -229,11 +229,11 @@ path {
   font-family: 'Inconsolata', Monaco, "Lucida Console", Consolas, "Courier New";
   font-size: 14px;
 }
-
+/*
 .y.axis .domain {
   display: none;
 }
-
+*/
 .y.axis line {
   stroke-width: 1px;
   stroke: #ccc;
