--- a/mobile/src/main/assets/style_mobile.css
+++ b/mobile/src/main/assets/style_mobile.css
@@ -36,9 +36,9 @@ table {
 body {
   font: 12px Arial;
 }
-/* change wirdth to 480 from 1090 */
+/* change wirdth to 480 from 1090 changed it back */
 #main-wrapper {
-  width: 480px;
+  width: 1090px;
 }
 
 #controls {
@@ -229,11 +229,11 @@ path {
   font-family: 'Inconsolata', Monaco, "Lucida Console", Consolas, "Courier New";
   font-size: 14px;
 }
-/*
+
 .y.axis .domain {
   display: none;
 }
-*/
+
 .y.axis line {
   stroke-width: 1px;
   stroke: #ccc;
@@ -256,7 +256,6 @@ circle.death {
 }
 
 #bars {
-  display: none;
   margin-bottom: 0px;
   border-bottom: 1px dotted #ccc;
 }
